# todos

./: README.md  pyproject.toml  requirements.txt
src/: todos.py
src/lists/: list.py
tests/: integration_test.py  test_list.py
