[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Arturo Torresm <arturo.torres.coo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
typer = "^0.7.0"
datetime = "^4.7"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
